--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,3 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = 'ru.stqa.sandbox.MyFirstProgramm'
+mainClassName = 'ru.stqa.pft.sandbox.MyFirstProgramm'
